# NitroCppTest-BiagioFESTA

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
data/: inputExampleData.json
src/: NitroCpp.cpp  NitroCpp.hpp  Rect.cpp  Rect.hpp  Solver.cpp  Solver.hpp  main.cpp
test/: Utility.hpp  main.cpp  testNitroCpp.cpp  testRect.cpp  testSolver.cpp
